<?xml version="1.0"?>
<package format="2">

    <name>xsens_awinda_ros</name>
    <version>0.0.1</version>

    <description>The xsens_awinda_ros package</description>

    <maintainer email="mattia.leonori@iit.it">Mattia Leonori</maintainer>
    <maintainer email="marta.lorenzini@iit.it">Marta Lorenzini</maintainer>

    <license>BSD</license>

    <url>https://github.com/hrii-iit/xsens_awinda_ros</url>
    <author email="mattia.leonori@iit.it">Mattia Leonori</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>urdf</depend>
    <depend>eigen_conversions</depend>
    <depend>roslib</depend>
    <depend>xsens_awinda_ros_msgs</depend>

    <export>
    </export>
    
</package>
